--- a/admin/templates/Login.html
+++ b/admin/templates/Login.html
@@ -32,7 +32,7 @@
   label {
     text-align: left;
     padding: 0.25rem 0;
-    color: #e863c7;
+    color:#C3447A;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
