--- a/admin/templates/admin.html
+++ b/admin/templates/admin.html
@@ -565,6 +565,12 @@ table tbody tr {
                             <small>My Dashboard</small>
                         </a>
                     </li>
+                    <li>
+                        <a href="/info">
+                             <span class="las la-database"></span>
+                             <small>Database Info</small>
+                         </a>
+                     </li>
                 </ul>
             </div>
         </div>
